fixed  menu animation and visibility

--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,16 @@ body>div {
     left: 0;
 }
 
-body ul {
+#droppingList {
     position: absolute;
     list-style: none;
     text-align: center;
-    display: none;
+    /* display: none; */
+    opacity: 0;
     left: 50%;
     top: 0%;
     transform: translate(-50%, -50%);
-    font-size: 2rem;
+    font-size: 3vw;
 }
 
 #nav {
@@ -71,11 +72,16 @@ body ul {
     position: absolute;
 }
 
-@media only screen and (max-width: 1024px) {
+#para {
+    font-size: 1.2vw
+}
+
+
+/* @media only screen and (max-width: 1024px) {
     #para {
         font-size: 2rem;
     }
-}
+} */
 
 @media only screen and (max-width: 600px) {
     #nav {
@@ -105,7 +111,10 @@ body ul {
         transform: translate(-50%, -50%);
         font-size: 1.5rem;
     }
-    #para {
+    /* #para {
         font-size: 1.5rem;
+    } */
+    #para {
+        font-size: 4vw
     }
 }
